# contact-management-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  settings.json
commands/: __init__.py  add.py  birthdays.py  change.py  close.py  command.py  delete.py  dispatcher.py  find.py  find_notes.py  hello.py  help.py  invalid.py
docs/: CHANGELOG.md
models/: __init__.py  address.py  birthday.py  contact_book.py  email.py  field.py  name.py  note.py  phone.py  record.py  tag.py
scripts/: changelog_generator.py
src/: main.py
src/commands/: add.py  birthdays.py  change.py  find.py  find_notes.py  hello.py  invalid.py
src/models/: __init__.py  email.py  record.py
src/utils/: __init__.py  command_parser.py  fuzz_comparator.py  pickle_reader.py
utils/: __init__.py  color_message.py  command_parser.py  format_message.py  fuzz_comparator.py  input_normalizer.py  pickle_reader.py
